colocando os testes para funcionar

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,16 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = projeto.settings # Indica onde estão as settings, para fazer os testes. O addopts serve para adicionar opções nos testes
-python_files = test.py tests.py test_*.py tests_*.py *_test.py *_tests.py # Garante que seja encontrado testes em arquivos com essa nomenclatura
+DJANGO_SETTINGS_MODULE = projeto.settings 
+python_files = test.py tests.py test_*.py tests_*.py *_test.py *_tests.py 
 addopts = 
   --doctest-modules
   --strict-markers
+  -rp
 markers =
   slow: Run tests that are slow
   fast: Run fast tests
+
+
+
+
+# O Django Settings indica onde estão as settings, para fazer os testes. O addopts serve para adicionar opções nos testes
+# O Python files garante que seja encontrado testes em arquivos com essa nomenclatura
